Try to fix the alignment of topics

--- a/ckanext/data_depositario/fanstatic/styles/custom.css
+++ b/ckanext/data_depositario/fanstatic/styles/custom.css
@@ -1312,7 +1312,6 @@ div .module-heading > .search-form.no-bottom-border {
     }
 
     .modify_bloc_3 .tx_black{
-      border: 4px white solid;
       width: 100%;
       font-size: 13px;
       line-height: 1.5em;
